#
# This is the CMakeLists.txt file for the MonkVG library
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MonkVG)
SET(PROJECT_VERSION 1.0)

INCLUDE("Build_information.cmake")

INCLUDE_DIRECTORIES(BEFORE
  "${PROJECT_SOURCE_DIR}/../src"
  "${PROJECT_SOURCE_DIR}/../include"
  "${PROJECT_SOURCE_DIR}/../src/opengl"
  "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES"
  "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES11"
  "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES20"
  "${PROJECT_SOURCE_DIR}/../glu/include"
  "${PROJECT_SOURCE_DIR}/../projects/MonkVG-Windows/glew/include"
)

FILE(GLOB SR_SOURCE_CPP "${PROJECT_SOURCE_DIR}/../src/*.cpp")
SOURCE_GROUP("Source Files" FILES ${SR_SOURCE_CPP})

FILE(GLOB SR_SOURCE_OPENGL_CPP "${PROJECT_SOURCE_DIR}/../src/opengl/*.cpp")
SOURCE_GROUP("Source Files\\opengl" FILES ${SR_SOURCE_OPENGL_CPP})

FILE(GLOB SR_SOURCE_OPENGLES_CPP "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/*.cpp")
SOURCE_GROUP("Source Files\\OpenGLES" FILES ${SR_SOURCE_OPENGLES_CPP})

FILE(GLOB SR_SOURCE_OPENGLES11_CPP "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES11/*.cpp")
SOURCE_GROUP("Source Files\\OpenGLES\\OpenGLES11" FILES ${SR_SOURCE_OPENGLES11_CPP})

FILE(GLOB SR_SOURCE_OPENGLES20_CPP "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES20/*.cpp")
SOURCE_GROUP("Source Files\\OpenGLES\\OpenGLES20" FILES ${SR_SOURCE_OPENGLES20_CPP})

FILE(GLOB SR_HEADER_H "${PROJECT_SOURCE_DIR}/../src/*.h")
SOURCE_GROUP("Header Files" FILES ${SR_HEADER_H})

FILE(GLOB SR_HEADER_OPENGL_H "${PROJECT_SOURCE_DIR}/../src/opengl/*.h")
SOURCE_GROUP("Header Files\\opengl" FILES ${SR_HEADER_OPENGL_H})

FILE(GLOB SR_HEADER_MONKVG_H "${PROJECT_SOURCE_DIR}/../include/MonkVG/*.h")
SOURCE_GROUP("Header Files\\MonkVG" FILES ${SR_HEADER_MONKVG_H})

FILE(GLOB SR_SOURCE_OPENGLES_H "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/*.h")
SOURCE_GROUP("Header Files\\OpenGLES" FILES ${SR_SOURCE_OPENGLES_H})

FILE(GLOB SR_SOURCE_OPENGLES11_H "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES11/*.h")
SOURCE_GROUP("Header Files\\OpenGLES\\OpenGLES11" FILES ${SR_SOURCE_OPENGLES11_H})

FILE(GLOB SR_SOURCE_OPENGLES20_H "${PROJECT_SOURCE_DIR}/../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES20/*.h")
SOURCE_GROUP("Header Files\\OpenGLES\\OpenGLES20" FILES ${SR_SOURCE_OPENGLES20_H})


SET(SR_SOURCES_LIST
  ${SR_SOURCE_CPP}
  ${SR_SOURCE_OPENGL_CPP}
  ${SR_SOURCE_OPENGLES_CPP}
  ${SR_SOURCE_OPENGLES11_CPP}
  ${SR_SOURCE_OPENGLES20_CPP}
  ${SR_HEADER_H}
  ${SR_HEADER_OPENGL_H}
  ${SR_HEADER_MONKVG_H}
  ${SR_SOURCE_OPENGLES_H}
  ${SR_SOURCE_OPENGLES11_H}
  ${SR_SOURCE_OPENGLES20_H}
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SR_SOURCES_LIST})
#ADD_LIBRARY(${PROJECT_NAME} SHARED ${SR_SOURCES_LIST})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "${PREPROCESSOR_DEFINES};NOMINMAX;OPENVG_STATIC_LIBRARY;GLEW_STATIC")